--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.5.29"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.4.4",
     "@tailwindcss/vite": "^4.2.1",
     "@types/node": "^22.0.0",
     "@vitejs/plugin-vue": "^6.0.4",
