feat(01-02): configure Axios HTTP client and TanStack Query with VueQueryPlugin
- Install @tanstack/vue-query and axios
- Create src/lib/http.ts: Axios instance reading VITE_API_BASE_URL as baseURL
- Create src/lib/query.ts: QueryClient with 5-minute staleTime default
- Update src/main.ts: register VueQueryPlugin with queryClient before mount
- Remove .gitkeep from src/lib/ and src/types/ (now contain real files)
- npm run build succeeds, vue-tsc --noEmit clean, npx biome check passes

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "lint:fix": "biome check --fix ."
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.92.9",
+    "axios": "^1.13.6",
     "vue": "^3.5.29"
   },
   "devDependencies": {
